# omg-refactor-explainability

./: .gitignore  README.md
explainability/raw_face/: Captum_config.yaml  Explain_Captum.py  common.py
explainability/transcript/: Captum_Analysis_README.md  common.py  explain_config.yaml  pyproject.toml  transcript_explain.py
explainability/transcript/transcript/artifacts/explanations/: ig_attributions.npy  mean_abs_per_feature.npy
src/: pyproject.toml
src/fullbody/: README.md  __init__.py  common.py  config.yaml  evaluate_predictions.py  extract_fullbody.py  predict.py  preprocess.py  train.py
src/fullbody/tests/: test_ccc.py  test_config.py  test_parquet_contract.py  test_windowing.py
src/landmarks/: README.md  __init__.py  common.py  config.yaml  evaluate_predictions.py  extract_landmarks.py  predict.py  preprocess.py  train.py
src/landmarks/tests/: test_ccc.py  test_config.py  test_parquet_contract.py  test_windowing.py
src/raw_data/scripts/: mp4_to_wav.sh
src/raw_face/: README.md  __init__.py  config.yaml  evaluate_predictions.py  extract_faces.py  predict.py  preprocess.py  train.py
src/raw_face/tests/: test_ccc.py  test_config.py  test_parquet_contract.py  test_windowing.py
src/speech/: README.md  __init__.py  common.py  config.yaml  evaluate_predictions.py  predict.py  preprocess.py  train.py
src/speech/tests/: test_ccc.py  test_config.py  test_evaluate_predictions.py  test_model_shape.py  test_parquet_contract.py  (+2 more)
src/transcript/: README.md  __init__.py  common.py  config.yaml  evaluate_predictions.py  predict.py  preprocess.py  train.py
(+16 files in other folders)
